--- a/Archives/.project
+++ b/Archives/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tuto1</name>
+	<name>blink_timer</name>
 	<comment></comment>
 	<projects>
 	</projects>
